@@ -1,4 +1,4 @@
-/* $Id: winlib.h,v 1.1.2.7.2.7 2008/11/18 02:27:58 uehira Exp $ */
+/* $Id: winlib.h,v 1.1.2.7.2.8 2008/11/18 04:04:16 uehira Exp $ */
 
 #ifndef _WIN_LIB_H_
 #define _WIN_LIB_H_
@@ -119,5 +119,6 @@ int strncmp2(char *, char *, int);
 int strcmp2(char *, char *);
 uint32_w read_onesec_win(FILE *, uint8_w **);
 void Shm_init(struct Shm *, size_t);
+void WIN_version(void);
 
 #endif  /* !_WIN_LIB_H_*/
